--- a/main.html
+++ b/main.html
@@ -10,6 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<thead>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>13</td>
+				<td>ganesh</td>
+			</tr>
+			<tr>
+				<td>45</td>
+				<td>Mallik</td>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 
